--- a/startbootstrap-freelancer-1.0.5/index.html
+++ b/startbootstrap-freelancer-1.0.5/index.html
@@ -74,9 +74,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/Port Pic.jpg" height="200px" width="250px" alt="Me">
+                    <img class="img-responsive" src="img/Port Pic.jpg" height="100px" width="150px" alt="Me">
                     <div class="intro-text">
-                        <span class="name">Portfolio de Davon Jackson</span>
+                        <span class="name">Davon Jackson</span>
                         <hr class="star-light">
                         <span class="skills">Web Developer - Css/Html - JavaScript</span>
                     </div>
@@ -251,10 +251,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.google.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://github.com/Djacks44" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
@@ -263,7 +260,7 @@
                                 <a href="https://www.linkedin.com/in/davon-jackson-491b12100?trk=nav_responsive_tab_profile_pic" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="http://stackoverflow.com/users/5855406/djacks" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
                             </li>
                         </ul>
                     </div>
